==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

 - Extended the subselect support. See :ref:`SELECT Reference
   <sql_reference_subselect>` for details.

Changes
=======

 - Added support for ``GROUP BY`` in combination with subselect. E.g.::

     select x, count(*) from (select x from t limit 1) as tt group by x;

 - Implemented hash sum scalar functions (MD5, SHA1).
   Please see :ref:`sha1 <sha1>`.

Fixes
=====

 - Removed ``psql.enabled`` and ``psql.port`` settings from ``sys.cluster``
   because they where wrongly exposed in this table.

 - Fixed an issue which caused failing `sys.snapshot` queries if the
   `data.path` of an existing fs repository was not configured anymore

 - Use the region of the EC2 instance for EC2 discovery when neither
   ``cloud.aws.ec2.endpoint`` nor ``cloud.aws.region`` are specified or do not
   resolve in a valid service endpoint.

 - Use crate favicon instead of elasticsearch.

 - Fix: `sys.snapshot` queries hung instead of throwing an error if something
   went wrong.

 - Fixed an issue which lead to brief unavailability of already registered
   functions after a function was created or dropped in the same schema.

 - Fix: Appearance of NPE during startup of crate

 - Fix: Log4j would yield a "No log4j2 configuration file found" error when
   shutting down crate ungracefully (via kill signal)

 - Fix: Restoring empty partitioned tables wasn't possible